src/styles/dark.scss
.navbar {
    font-weight: 600;
}

$enable-shadows: true;
$enable-gradients: true;

.vmin-50 {
    width: 50vmin !important;
    height: 50vmin !important;
}

$theme-colors: (
    //02549a
    "primary": #02549a,
    "secondary": #2576bc,
    "transparent": transparent,
    "background": #212529,
    "darker": darken(#212529, 5%)
);
$theme-colors: map-merge($theme-colors,
        ("darkblue": rgba(scale-color(map-get($theme-colors, "primary"), $lightness: -20%), 1)));

$sizes: (
    0: 0,
    40: 40%
);

@import "~bootstrap/scss/functions";

$white: #fff !default;
$gray-100: #f8f9fa !default;
$gray-200: #e9ecef !default;
$gray-300: #dee2e6 !default;
$gray-400: #ced4da !default;
$gray-500: #adb5bd !default;
$gray-600: #6c757d !default;
$gray-700: #495057 !default;
$gray-800: #343a40 !default;
$gray-900: #212529 !default;
$black: #000 !default;

$grays: (
    ) !default;
// stylelint-disable-next-line scss/dollar-variable-default
$grays: map-merge(("100": $gray-100,
            "200": $gray-200,
            "300": $gray-300,
            "400": $gray-400,
            "500": $gray-500,
            "600": $gray-600,
            "700": $gray-700,
            "800": $gray-800,
            "900": $gray-900 ),
        $grays
);

$blue: #007bff !default;
$indigo: #6610f2 !default;
$purple: #6f42c1 !default;
$pink: #e83e8c !default;
$red: #dc3545 !default;
$orange: #fd7e14 !default;
$yellow: #ffc107 !default;
$green: #28a745 !default;
$teal: #20c997 !default;
$cyan: #17a2b8 !default;

$colors: (
    ) !default;
// stylelint-disable-next-line scss/dollar-variable-default
$colors: map-merge(("blue": $blue,
            "indigo": $indigo,
            "purple": $purple,
            "pink": $pink,
            "red": $red,
            "orange": $orange,
            "yellow": $yellow,
            "green": $green,
            "teal": $teal,
            "cyan": $cyan,
            "white": $white,
            "gray": $gray-600,
            "gray-dark": $gray-800 ),
        $colors
);

$primary: $blue !default;
$secondary: $gray-600 !default;
$success: $green !default;
$info: $cyan !default;
$warning: $yellow !default;
$danger: $red !default;
$light: $gray-100 !default;
$dark: $gray-800 !default;

$theme-colors: (
    ) !default;
// stylelint-disable-next-line scss/dollar-variable-default
$theme-colors: map-merge(("primary": $primary,
            "secondary": $secondary,
            "success": $success,
            "info": $info,
            "warning": $warning,
            "danger": $danger,
            "light": $light,
            "dark": $dark ),
        $theme-colors
);

$border-color: $gray-800;
$alert-border-radius: 3px;

$body-bg: $gray-900;
$body-color: $gray-200;

$card-bg: $gray-700;
$card-cap-color: $white;
$card-cap-bg: #474e54;

$code-color: inherit;

$container-max-widths: (
    sm: 540px,
    md: 720px,
    lg: 960px,
    xl: 1240px
);

$dropdown-bg: $gray-700;
$dropdown-color: $black;
$dropdown-link-color: $white;
$dropdown-link-hover-color: $white;
$dropdown-link-hover-bg: darken($dropdown-bg, 5%);

$hr-border-color: rgba($white, 0.2);

$link-color: scale-color(theme-color("secondary"), $lightness: 50%);
$link-decoration: underline;

$modal-content-bg: $dark;

$navbar-dark-color: rgba($white, 0.75);

.navbar-dark>.navbar-nav>.nav-link.active {
    font-weight: bold;
}

$nav-tabs-border-color: $gray-700;
$nav-tabs-link-hover-border-color: $gray-700 $gray-700 $nav-tabs-border-color;
$nav-tabs-link-active-color: theme-color("secondary"); //$gray-200;
$nav-tabs-link-active-bg: $body-bg;
$nav-tabs-link-active-border-color: $gray-500 $gray-500 $nav-tabs-link-active-bg;

$pre-color: inherit;

$popover-header-color: $black;
$popover-body-color: $black;

$progress-bar-color: $black;

$toast-color: $black;
$toast-background-color: $gray-700;
$toast-header-color: $toast-color;
$toast-header-background-color: $gray-600;

@import "~bootstrap/scss/variables";

@import "~bootstrap/scss/mixins";
@import "~bootstrap/scss/root";
@import "~bootstrap/scss/reboot";
@import "~bootstrap/scss/type";

//@import "~bootstrap/scss/images";
@import "~bootstrap/scss/code";
@import "~bootstrap/scss/grid";
@import "~bootstrap/scss/tables";
@import "~bootstrap/scss/forms";
@import "~bootstrap/scss/buttons";
@import "~bootstrap/scss/transitions";
@import "~bootstrap/scss/dropdown";
//@import "~bootstrap/scss/button-group";
@import "~bootstrap/scss/input-group";
@import "~bootstrap/scss/custom-forms";
@import "~bootstrap/scss/nav";
@import "~bootstrap/scss/navbar";
@import "~bootstrap/scss/card";
//@import "~bootstrap/scss/breadcrumb";
@import "~bootstrap/scss/pagination";
@import "~bootstrap/scss/badge";
//@import "~bootstrap/scss/jumbotron";
@import "~bootstrap/scss/alert";
@import "~bootstrap/scss/progress";
//@import "~bootstrap/scss/media";
//@import "~bootstrap/scss/list-group";
@import "~bootstrap/scss/close";
@import "~bootstrap/scss/toasts";
@import "~bootstrap/scss/modal";
@import "~bootstrap/scss/tooltip";
@import "~bootstrap/scss/popover";
//@import "~bootstrap/scss/carousel";
@import "~bootstrap/scss/spinners";
@import "~bootstrap/scss/utilities";
//@import "~bootstrap/scss/print";

.text-secondary {
    color: #3b93de !important;
}

.bg-body {
    background-color: $body-bg;
}

.nav-tabs .nav-link {
    color: $gray-200;
    border: $nav-tabs-border-width solid $gray-700;
    margin-right: 0.1rem;
    margin-left: 0.1rem;
}

@include media-breakpoint-down("sm") {
    .nav-tabs .nav-link {
        margin-bottom: 0;
    }
}

.alert-warning {
    font-weight: 600;
    @include alert-variant(transparentize($warning, 0.5), $warning, $black);
}

.alert-error {
    @include alert-variant($dark, $danger, $white);
}

.alert-dismissible {
    padding-right: $alert-padding-x !important;
}

.pre-wrap {
    white-space: pre-wrap;
}

.h-unset {
    height: unset !important;
}

@each $breakpoint in map-keys($grid-breakpoints) {
    @include media-breakpoint-up($breakpoint) {
        $infix: breakpoint-infix($breakpoint, $grid-breakpoints);

        @each $prop,
        $abbrev in (width: w, height: h) {

            @each $size,
            $length in $sizes {
                .#{$abbrev}#{$infix}-#{$size} {
                    #{$prop}: $length !important;
                }
            }
        }
    }
}

@each $breakpoint in map-keys($grid-breakpoints) {
    @include media-breakpoint-down($breakpoint) {
        $infix: breakpoint-infix($breakpoint, $grid-breakpoints);

        .text#{$infix}-break {
            word-wrap: break-word !important;
        }
    }
}

.toast-header {
    .close {
        margin-left: auto !important;

        span {
            margin-left: 0.5rem !important;
        }
    }
}

.anim-fade-appear {
    opacity: 0;
}

.anim-fade-appear-active {
    opacity: 1;
}

.anim-fade-exit {
    opacity: 1;
}

.anim-fade-exit-active {
    opacity: 0;
}

.anim-fade-appear-active,
.anim-fade-exit-active {
    transition: opacity 600ms;
}

.anim-collapse-all {
    display: none;
}

.anim-collapse-enter {
    flex-grow: 0;
    flex-basis: 0;
    min-width: 0;
    overflow: hidden;
    display: unset !important;
}

.anim-collapse-enter-active {
    flex-grow: 1;
    display: unset !important;
}

.anim-collapse-enter-done {
    flex-grow: 1;
    display: unset !important;
}

.anim-collapse-exit {
    flex-grow: 1;
    display: unset !important;
}

.anim-collapse-exit-active {
    flex-grow: 0;
    flex-basis: 0;
    overflow: hidden;
}

.anim-collapse-exit-done {
    flex-grow: 0;
    flex-basis: 0;
    overflow: hidden;
}

.anim-collapse-enter-active,
.anim-collapse-exit-active {
    transition: flex-grow 200ms;
}

.nowrap {
    white-space: nowrap;
}

//these exists on firefox
//noinspection CssUnknownProperty
.fancyscroll {
    scrollbar-width: thin;
    scrollbar-color: $gray-800 rgba($gray-600, 0.5);
}

//chrome/safari
.fancyscroll::-webkit-scrollbar {
    height: 8px;
    width: 8px;
}

.fancyscroll::-webkit-scrollbar-track {
    background: rgba($gray-600, 0.5);
}

.fancyscroll::-webkit-scrollbar-thumb {
    background-color: $gray-800;
}

.jobswidget {
    border: $gray-600 double;
    background: rgba($gray-600, 0.5);

    h5 {
        background: rgba($gray-800, 0.2);
    }
}

.home {
    svg path {
        stroke: #3c3c3c;
        stroke-width: 3px;
    }
}

.nav-item {
    &:not(:first-of-type)>.instanceedittab {
        border-top-right-radius: 0 !important;
        border-top-left-radius: 0 !important;
    }

    &:not(:last-of-type)>.instanceedittab {
        border-bottom-right-radius: 0 !important;
        border-bottom-left-radius: 0 !important;
        border-bottom: $gray-600 solid 1px;
    }
}

//instanceedittab
.instanceedittab {
    background-color: theme-color("primary");
    color: white;

    &.no-access {
        background-color: theme-color("danger");
    }

    &:hover {
        color: darken(white, 20);
    }

    &.active {
        background-color: darken(theme-color("primary"), 12) !important;

        &.no-access {
            background-color: darken(theme-color("danger"), 12) !important;
            color: white !important;
        }

        color: lightskyblue !important;
        box-shadow: inset 0 2px 8px -2px black;
        /*border: 1px solid $gray-600 !important;*/
    }
}

.hover-bar:not(.pin-open) .tab-text {
    transition: max-width 1s, padding 1s;

    @include media-breakpoint-up("lg") {
        max-width: 0;
    }

    //IntelliJ does not recognize clip as a valid value but I assure you it is.
    //noinspection CssInvalidPropertyValue
    overflow: clip;
}

@include media-breakpoint-up("lg") {
    .hover-bar:not(.pin-close):hover {
        & .tab-text {
            max-width: 300px;
        }
    }

    .hover-bar:not(:hover) {
        & .tab-text {
            padding-left: 0 !important;
        }
    }
}

.reset-table {
    & tr {
        background-color: initial !important;
    }

    & th,
    & td {
        border-color: initial !important;
        padding: initial !important;
        vertical-align: initial !important;
        border-top: initial !important;
    }
}

.browser-ul {
    list-style: none;
    margin-left: 0;
    margin-top: 4px;
    padding-left: 1em;
}

.browser-li {
    margin-top: 4px;
}

.report-issue {
    position: fixed;
    bottom: 0px;
    left: 0px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.behind-nav {
    z-index: -1;
}

//Fix vertical align for fa icons
* {
    line-height: inherit;
}

@import "./select.scss";

